tests/baselines/reference/assignToExistingClass.errors.txt
tests/cases/compiler/assignToExistingClass.ts(8,13): error TS2539: Cannot assign to 'Mocked' because it is not a variable.


==== tests/cases/compiler/assignToExistingClass.ts (1 errors) ====
    module Test {
        class Mocked {
            myProp: string;
        }
    
        class Tester {
            willThrowError() {
                Mocked = Mocked || function () { // => Error: Invalid left-hand side of assignment expression.
                ~~~~~~
!!! error TS2539: Cannot assign to 'Mocked' because it is not a variable.
                    return { myProp: "test" };
                };
            }
        }
     
    }
    